# ToDoTerminal

./: .env  .gitignore  README.md
client/: Cargo.toml  README.md
client/rust/: Cargo.toml
client/rust/src/: main.rs
client/src/: main.rs
server/: main.py  notes.json  todos.json
testing/: Cargo.toml
testing/src/: main.rs
