[package]
name = "todoterminal"
version = "0.1.0"
edition = "2021"
license = "ALL RIGHTS RESERVED"
authors = ["Tuinboon <github@thijmens.nl>"]
readme = "README.md"
description = "A CLI tool for managing TODOs on a remote server"
homepage = "https://github.com/TuinboonDev/ToDoTerminal/README.md"
repository = "https://github.com/TuinboonDev/ToDoTerminal/"

[dependencies]
base64 = "0.22.1"
chrono = "0.4.39"
dotenv = "0.15.0"
qr2term = "0.3.3"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["json"] }
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full"] }
